# subenum

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: check.yml  publish.yml
examples/: require_docs.rs
src/: build.rs  derive.rs  enum.rs  extractor.rs  iter.rs  lib.rs  param.rs  predicate.rs  visitor.rs
src/derive/: partial_eq.rs
tests/: associated_types.rs  complex_path_and_qself.rs  const_generics.rs  it.rs  lifetimes.rs  mixed_generics.rs  no_std.rs  parent_specific.rs  subenum_specific.rs  test.rs  using_test.rs
