[package]
name = "subenum"
version = "1.1.3"
edition = "2021"
authors = ["Paho Lurie-Gregg <paho@paholg.com>"]
documentation = "https://docs.rs/subenum"
repository = "https://github.com/paholg/subenum"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """A proc-macro to create subsets of enums, that can be converted
  to and from."""
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["enum", "sub-enum", "no-std"]

[lib]
proc-macro = true
name       = "subenum"

[[example]]
name = "require_docs"

[dev-dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
strum       = { version = "0.27.2", features = ["derive"], default-features = false }

[dependencies]
quote       = "1.0.41"
syn         = { version = "2.0.106", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.101"
heck        = "0.5.0"

[features]
default     = ["std", "error_trait", "strum/std"]
std         = []
error_trait = []
